@@ -1,6 +1,7 @@
 package codesquad.was.http.type;
 
 import java.util.Arrays;
+import java.util.Collections;
 import java.util.Set;
 
 public enum MimeType {
@@ -12,8 +13,10 @@ public enum MimeType {
     PNG(Set.of("png"), "image/png"),
     JPG(Set.of("jpg", "jpeg"), "image/jpeg"),
     SVG(Set.of("svg"), "image/svg+xml"),
-    APPLICATION_X_WWW_FORM_ENCODED(Set.of("application/x-www-form-urlencoded"), "application/x-www-form-urlencoded"),
-    APPLICATION_OCTET_STREAM(Set.of("application/octet-stream"), "application/octet-stream");
+    GIF(Set.of("gif"), "image/gif"),
+    APPLICATION_X_WWW_FORM_ENCODED(Collections.emptySet(), "application/x-www-form-urlencoded"),
+    MULTIPART_FORM_DATA(Collections.emptySet(), "multipart/form-data"),
+    APPLICATION_OCTET_STREAM(Collections.emptySet(), "application/octet-stream");
 
     private final Set<String> extensions;
     private final String value;
@@ -23,12 +26,19 @@ public enum MimeType {
         this.value = value;
     }
 
-    public static String findMimeValue(final String extension) {
+    public static String findValue(final String extension) {
         return Arrays.stream(values())
                 .filter(type -> type.extensions.contains(extension))
                 .map(type -> type.value)
                 .findAny()
                 .orElse(APPLICATION_OCTET_STREAM.value);
+    }
+
+    public static MimeType findMimeType(final String extension) {
+        return Arrays.stream(values())
+                .filter(type -> type.value.contains(extension))
+                .findAny()
+                .orElse(APPLICATION_OCTET_STREAM);
     }
 
     public String getValue() {
